--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data source=database.db"
+  "ConnectionStrings": { 
+    "DefaultConnection": "Host=localhost;Database=database;Username=postgres;Password=password" 
   }
 }
