--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,16 +1,11 @@
-FROM node:latest AS build
+FROM node:18-alpine3.18 AS build
 WORKDIR /app/
-
 COPY ./client/package*.json .
 RUN npm ci
 RUN npm i -g @angular/cli
-
 COPY ./client/ .
-RUN npm run build --configuration=production
-
+RUN npm run build --configuration=development
 FROM nginx:latest
 COPY ./client/nginx.conf /etc/nginx/conf.d/default.conf
-
 COPY --from=build /app/dist/ /usr/share/nginx/html
-
-EXPOSE 81
+EXPOSE 80
