--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.3.0",
+    "@ngrx/effects": "^14.3.3",
+    "@ngrx/store": "^14.3.3",
+    "@ngrx/store-devtools": "^14.3.3",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^9.0.0",
