--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "storybook": "ng run client:storybook",
+    "build-storybook": "ng run client:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -23,10 +25,12 @@
     "@ngrx/store-devtools": "^15.4.0",
     "bootstrap": "^5.3.3",
     "font-awesome": "4.7",
+    "init": "^0.1.2",
     "ngx-bootstrap": "^10.3.0",
     "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
+    "storybook": "^8.0.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -34,6 +38,15 @@
     "@angular-devkit/build-angular": "^15.2.11",
     "@angular/cli": "~15.2.11",
     "@angular/compiler-cli": "^15.2.0",
+    "@chromatic-com/storybook": "^1.3.5",
+    "@compodoc/compodoc": "^1.1.24",
+    "@storybook/addon-docs": "^8.0.10",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
+    "@storybook/angular": "^8.0.10",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/test": "^8.0.10",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
